got rid of flicker issue on safari and added transitions, scaling, and blur to the tile_up tiles

--- a/app/assets/stylesheets/animations.css.styl
+++ b/app/assets/stylesheets/animations.css.styl
@@ -32,9 +32,11 @@ delayCoeff = 0.1s
 
 .animate
   opacity 0
+  backface-visibility hidden
 
 .visible
   animation visible .8s ease forwards
+  backface-visibility hidden
 
 .invisible
   animation invisible .4s ease forwards
@@ -62,10 +64,12 @@ for num in (1..12)
   from
     transform: scale(1.1);
     opacity 0
+    -webkit-filter opacity(0)
     transform: translateY(30px);
   to
     transform: scale(1.0);
     opacity 1
+    -webkit-filter opacity(1)
     transform: translateY(0);
 
 @keyframes invisible
